--- a/Tools/NSplashScreen.ui
+++ b/Tools/NSplashScreen.ui
@@ -148,6 +148,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
     </active>
     <inactive>
      <colorrole role="WindowText">
@@ -279,6 +288,15 @@
      <colorrole role="ToolTipText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
@@ -422,6 +440,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
     </disabled>
    </palette>
   </property>
@@ -435,7 +462,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>0</y>
+     <y>-10</y>
      <width>631</width>
      <height>321</height>
     </rect>
@@ -454,7 +481,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>150</y>
+     <y>130</y>
      <width>141</width>
      <height>16</height>
     </rect>
@@ -471,12 +498,12 @@
    <property name="styleSheet">
     <string notr="true"> font: italic 100 9pt &quot;Cantarell&quot;;
 background-color: rgba(255, 255, 255, 0);
-
+color: rgb(14, 25, 21);
 
 </string>
    </property>
    <property name="text">
-    <string notr="true">Manager</string>
+    <string notr="true">Nulstar Manager</string>
    </property>
   </widget>
   <widget class="QLabel" name="lblSlogan">
@@ -500,7 +527,7 @@ background-color: rgba(255, 255, 255, 0);
     <string notr="true">color: rgb(255,255,255) ; </string>
    </property>
    <property name="text">
-    <string>Born In WCA</string>
+    <string>Born In Nulstar</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -510,7 +537,7 @@ background-color: rgba(255, 255, 255, 0);
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>178</y>
+     <y>160</y>
      <width>561</width>
      <height>16</height>
     </rect>
@@ -526,7 +553,8 @@ background-color: rgba(255, 255, 255, 0);
    </property>
    <property name="styleSheet">
     <string notr="true"> font: italic 100 9pt &quot;Cantarell&quot;;
-background-color: rgba(255, 255, 255, 0);</string>
+background-color: rgba(255, 255, 255, 0);
+color: rgb(14, 25, 21);</string>
    </property>
    <property name="text">
     <string notr="true">Manager</string>
@@ -556,7 +584,7 @@ background-color: rgba(255, 255, 255, 0);</string>
     <string notr="true">color: rgb(255,255,255) ; </string>
    </property>
    <property name="text">
-    <string>www.worldcoinalliance.net</string>
+    <string>nulstar.com</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -573,7 +601,7 @@ background-color: rgba(255, 255, 255, 0);</string>
    </property>
    <property name="font">
     <font>
-     <family>DejaVu Serif</family>
+     <family>Cantarell</family>
      <pointsize>8</pointsize>
     </font>
    </property>
@@ -612,7 +640,7 @@ background-color: rgba(255, 255, 255, 0);</string>
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>150</y>
+     <y>130</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -628,7 +656,8 @@ background-color: rgba(255, 255, 255, 0);</string>
    </property>
    <property name="styleSheet">
     <string notr="true">font: italic bold 100 9pt &quot;Cantarell&quot;;
-background-color: rgba(255, 255, 255, 0);</string>
+background-color: rgba(255, 255, 255, 0);
+color: rgb(14, 25, 21);</string>
    </property>
    <property name="text">
     <string>x.x.x</string>
