--- a/CreatePackage/NCreatePackage.ui
+++ b/CreatePackage/NCreatePackage.ui
@@ -290,65 +290,14 @@
         <property name="horizontalSpacing">
          <number>0</number>
         </property>
-        <item row="0" column="1">
-         <widget class="QPushButton" name="tbtAddCommand">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>20</width>
-            <height>20</height>
-           </size>
-          </property>
+        <item row="1" column="0">
+         <widget class="QLabel" name="lblUpgradeCommand">
           <property name="text">
-           <string/>
-          </property>
-          <property name="icon">
-           <iconset resource="NCreatePackage.qrc">
-            <normaloff>:/Resources/Images/Add.png</normaloff>:/Resources/Images/Add.png</iconset>
-          </property>
-          <property name="shortcut">
-           <string notr="true">Ctrl+1</string>
-          </property>
-          <property name="flat">
-           <bool>true</bool>
+           <string>Commands:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <widget class="QPushButton" name="tbtDeleteCommand">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>20</width>
-            <height>20</height>
-           </size>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="icon">
-           <iconset resource="NCreatePackage.qrc">
-            <normaloff>:/Resources/Images/Minus.png</normaloff>:/Resources/Images/Minus.png</iconset>
-          </property>
-          <property name="shortcut">
-           <string notr="true">Ctrl+2</string>
-          </property>
-          <property name="flat">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0" colspan="3">
+        <item row="2" column="0" colspan="3">
          <widget class="QTableView" name="tvwUpgradeCommand">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -409,22 +358,8 @@
           </attribute>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="lblUpgradeCommand">
-          <property name="text">
-           <string>Commands:</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="6" column="0" colspan="5">
-       <layout class="QGridLayout" name="gridLayout_3">
-        <property name="spacing">
-         <number>0</number>
-        </property>
-        <item row="0" column="1">
-         <widget class="QPushButton" name="tbtAddLog">
+        <item row="1" column="1">
+         <widget class="QPushButton" name="tbtAddCommand">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -452,6 +387,67 @@
           </property>
          </widget>
         </item>
+        <item row="1" column="2">
+         <widget class="QPushButton" name="tbtDeleteCommand">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="NCreatePackage.qrc">
+            <normaloff>:/Resources/Images/Minus.png</normaloff>:/Resources/Images/Minus.png</iconset>
+          </property>
+          <property name="shortcut">
+           <string notr="true">Ctrl+2</string>
+          </property>
+          <property name="flat">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="3">
+         <widget class="QTableView" name="tvwLog">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+          <attribute name="horizontalHeaderDefaultSectionSize">
+           <number>80</number>
+          </attribute>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+          <attribute name="verticalHeaderMinimumSectionSize">
+           <number>15</number>
+          </attribute>
+          <attribute name="verticalHeaderDefaultSectionSize">
+           <number>15</number>
+          </attribute>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="6" column="0" colspan="5">
+       <layout class="QGridLayout" name="gridLayout_3">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <item row="0" column="2">
          <widget class="QPushButton" name="tbtDeleteLog">
           <property name="sizePolicy">
@@ -481,65 +477,33 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0" colspan="3">
-         <widget class="QTableView" name="tvwUpgradeLog">
+        <item row="0" column="1">
+         <widget class="QPushButton" name="tbtAddLog">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-            <horstretch>1</horstretch>
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="editTriggers">
-           <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
-          </property>
-          <property name="tabKeyNavigation">
-           <bool>false</bool>
-          </property>
-          <property name="alternatingRowColors">
-           <bool>true</bool>
-          </property>
-          <property name="selectionMode">
-           <enum>QAbstractItemView::SingleSelection</enum>
-          </property>
-          <property name="selectionBehavior">
-           <enum>QAbstractItemView::SelectRows</enum>
-          </property>
-          <property name="iconSize">
+          <property name="maximumSize">
            <size>
-            <width>16</width>
-            <height>16</height>
+            <width>20</width>
+            <height>20</height>
            </size>
           </property>
-          <property name="horizontalScrollMode">
-           <enum>QAbstractItemView::ScrollPerPixel</enum>
+          <property name="text">
+           <string/>
           </property>
-          <property name="showGrid">
-           <bool>false</bool>
+          <property name="icon">
+           <iconset resource="NCreatePackage.qrc">
+            <normaloff>:/Resources/Images/Add.png</normaloff>:/Resources/Images/Add.png</iconset>
           </property>
-          <property name="sortingEnabled">
+          <property name="shortcut">
+           <string notr="true">Ctrl+1</string>
+          </property>
+          <property name="flat">
            <bool>true</bool>
           </property>
-          <property name="wordWrap">
-           <bool>false</bool>
-          </property>
-          <attribute name="horizontalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>80</number>
-          </attribute>
-          <attribute name="horizontalHeaderStretchLastSection">
-           <bool>true</bool>
-          </attribute>
-          <attribute name="verticalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="verticalHeaderMinimumSectionSize">
-           <number>15</number>
-          </attribute>
-          <attribute name="verticalHeaderDefaultSectionSize">
-           <number>15</number>
-          </attribute>
          </widget>
         </item>
         <item row="0" column="0">
@@ -736,7 +700,6 @@
   <tabstop>txtDescription</tabstop>
   <tabstop>tbtAddLog</tabstop>
   <tabstop>tbtDeleteLog</tabstop>
-  <tabstop>tvwUpgradeLog</tabstop>
   <tabstop>tbtAddCommand</tabstop>
   <tabstop>tbtDeleteCommand</tabstop>
   <tabstop>tvwUpgradeCommand</tabstop>
