--- a/CreatePackage/NCreatePackage.ui
+++ b/CreatePackage/NCreatePackage.ui
@@ -24,7 +24,7 @@
   </property>
   <property name="baseSize">
    <size>
-    <width>800</width>
+    <width>900</width>
     <height>800</height>
    </size>
   </property>
@@ -388,93 +388,6 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <item row="2" column="0" colspan="5">
-         <widget class="QTableView" name="tvwFiles">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>1</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>350</width>
-            <height>300</height>
-           </size>
-          </property>
-          <property name="editTriggers">
-           <set>QAbstractItemView::NoEditTriggers</set>
-          </property>
-          <property name="tabKeyNavigation">
-           <bool>false</bool>
-          </property>
-          <property name="alternatingRowColors">
-           <bool>true</bool>
-          </property>
-          <property name="selectionMode">
-           <enum>QAbstractItemView::SingleSelection</enum>
-          </property>
-          <property name="selectionBehavior">
-           <enum>QAbstractItemView::SelectRows</enum>
-          </property>
-          <property name="iconSize">
-           <size>
-            <width>16</width>
-            <height>16</height>
-           </size>
-          </property>
-          <property name="horizontalScrollMode">
-           <enum>QAbstractItemView::ScrollPerPixel</enum>
-          </property>
-          <property name="showGrid">
-           <bool>false</bool>
-          </property>
-          <property name="sortingEnabled">
-           <bool>true</bool>
-          </property>
-          <property name="wordWrap">
-           <bool>false</bool>
-          </property>
-          <attribute name="horizontalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>80</number>
-          </attribute>
-          <attribute name="horizontalHeaderStretchLastSection">
-           <bool>true</bool>
-          </attribute>
-          <attribute name="verticalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="verticalHeaderMinimumSectionSize">
-           <number>15</number>
-          </attribute>
-          <attribute name="verticalHeaderDefaultSectionSize">
-           <number>15</number>
-          </attribute>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>24</width>
-            <height>29</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_14">
-          <property name="text">
-           <string>Platform :</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="1">
          <widget class="QComboBox" name="cbxPlatform">
           <property name="minimumSize">
@@ -497,6 +410,41 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="0" colspan="5">
+         <widget class="QLabel" name="label_13">
+          <property name="font">
+           <font>
+            <pointsize>11</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Files</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>24</width>
+            <height>29</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_14">
+          <property name="text">
+           <string>Platform :</string>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="3" colspan="2">
          <widget class="QPushButton" name="pbtLoadFiles">
           <property name="maximumSize">
@@ -514,19 +462,32 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="5">
-         <widget class="QLabel" name="label_13">
-          <property name="font">
-           <font>
-            <pointsize>11</pointsize>
-           </font>
+        <item row="2" column="0" colspan="5">
+         <widget class="QTableView" name="tvwFiles">
+          <property name="frameShape">
+           <enum>QFrame::Box</enum>
           </property>
-          <property name="text">
-           <string>Files</string>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
           </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
           </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+          <attribute name="horizontalHeaderDefaultSectionSize">
+           <number>80</number>
+          </attribute>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+          <attribute name="verticalHeaderMinimumSectionSize">
+           <number>15</number>
+          </attribute>
+          <attribute name="verticalHeaderDefaultSectionSize">
+           <number>15</number>
+          </attribute>
          </widget>
         </item>
        </layout>
@@ -752,7 +713,6 @@
   <tabstop>tvwLog</tabstop>
   <tabstop>cbxPlatform</tabstop>
   <tabstop>pbtLoadFiles</tabstop>
-  <tabstop>tvwFiles</tabstop>
   <tabstop>tvwUpgradeCommand</tabstop>
   <tabstop>tbtAddCommand</tabstop>
   <tabstop>tbtDeleteCommand</tabstop>
